<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_app">About</string>
    <string name="about_message">This software uses map data provided by OpenStreetMap.org</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="allowed_shortcuts_n_ip_ip_address_n_port_port_n_gw_gateway_n_mask_subnet_mask_n_mac_mac_address_n_ncustom_shortcuts_n_customtext_app_will_ask_you_to_enter_variable_manually">"Allowed shortcuts:
{IP} - IP address
{PORT} - port
{GW} - gateway
{MASK} - subnet mask
{MAC} - MAC address

Custom shortcuts:
{CUSTOMTEXT} - the application will ask you to enter the variable manually"</string>
    <string name="alpine_linux_termux_exit">Now you can work with Termux in Alpine Linux! To return to the Termux environment, it will be enough to write exit!</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Stryker</string>
    <string name="app_setting">Settings</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_page_modules_updates_here">Application page, modules, updates are here!</string>
    <string name="arguments">Arguments</string>
    <string name="authkey">AuthKey received</string>
    <string name="auto_connect">AUTO-CONNECT</string>
    <string name="auto_nupdate">"Auto
Refresh"</string>
    <string name="automatically_check_for_updates">Automatically check for updates</string>
    <string name="base">OSM base layer</string>
    <string name="base_nl">Netherlands base overlay</string>
    <string name="bing">Bing</string>
    <string name="bit">Unfortunately, your device is 32-bit and does not support the required library! Please try other features of the app!</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="br_failed">Password not found!</string>
    <string name="bruteforce_password">Password Brute Force</string>
    <string name="bruteforce_pin">Brute force PIN</string>
    <string name="cancel">Cancel</string>
    <string name="cant_airodump">Unable to start airodump-ng!..</string>
    <string name="cant_find_netw">"Sorry, I couldn't find the network. Swipe down to try again"</string>
    <string name="captured_be_here">Caught handshakes will be here!</string>
    <string name="catch_all_commands_output_and_errors">Catch all output of commands and errors</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check">Check</string>
    <string name="check1">Permission request</string>
    <string name="check2">Checking Permissions</string>
    <string name="check3">Architecture check</string>
    <string name="check4">Checking Drivers</string>
    <string name="check_3wifi_database_for_nearest_wifi">Check 3wifi database for nearby hotspots</string>
    <string name="check_admin">Check the panel for vulnerabilities</string>
    <string name="check_camera">Check RTSP for vulnerabilities</string>
    <string name="check_n3wifi">"Check
3WiFI"</string>
    <string name="check_rdp">Check RDP for vulnerabilities</string>
    <string name="check_smb">Check SMB for vulnerabilities</string>
    <string name="checking_inet">Checking internet connection…</string>
    <string name="choose_opt">Choose option</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_to_copy">Click to copy!</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">2970da46728a42d0a93f2fae9929897b</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="compass">Compass</string>
    <string name="confirm">Confirmation</string>
    <string name="connect_with_custom_pin">Connect with a PIN</string>
    <string name="coose_port">Choose port</string>
    <string name="copied">Copied to clipboard!</string>
    <string name="core_manager">Manager</string>
    <string name="custom_deauth">Now:</string>
    <string name="custom_scan">Now:</string>
    <string name="customvalue">Enter custom value</string>
    <string name="cut20">Cut for 20 seconds</string>
    <string name="cut_dev">Cut device</string>
    <string name="cyclemap">Cycle Map</string>
    <string name="dark_theme">Night theme</string>
    <string name="dashboard">Home</string>
    <string name="deauth">Deauthing…</string>
    <string name="deauth_clients">Client Deauthing</string>
    <string name="deauthing">Deauthing…</string>
    <string name="debug_desv">"Hi, I'm sorry you're having a problem! Please go through the entire installation path! After send off the file /Stryker/log.txt to the developer!"</string>
    <string name="debug_mode_on">Debug mode enabled!</string>
    <string name="debug_mode_title">Debug mode</string>
    <string name="default_web_client_id">693560063747-ufb5han8bv56jli6o6sq1cooplftfjmt.apps.googleusercontent.com</string>
    <string name="delcache">Removing cache…</string>
    <string name="delchroot">Removing the old chroot…</string>
    <string name="delete_nstryker">"Remove
Striker"</string>
    <string name="delete_stryker_and_chroot">Remove Stryker and chroot.</string>
    <string name="deleting">Deleting…</string>
    <string name="detect_os">Detect OS</string>
    <string name="detect_services">Service discovery</string>
    <string name="dev_issue">, this is a device error</string>
    <string name="disable_mon">Turn off monitoring mode</string>
    <string name="do_not_turn_off_the_wifi_for_pixie_dust">Do not turn off the wifi module during attacks</string>
    <string name="ew_path">(/sdcard/Stryker/exploits/)</string>
    <string name="example_n_exploit_successful_marked_as_good_result_nif_no_such_msg_failed">"Example:
[vuln] Target vulnreable - flagged as a good result.
If there is no such message, an error"</string>
    <string name="example_n_myexploit_t_ip_p_port_threads_n_n_n_n_works_as_customtext_and_you_will_be_able_to_enter_it_before_scan_starts">"Example:
./myexploit -t {IP} -p {PORT} --threads {N}

{N} works like {CUSTOMTEXT} and you can enter it before the scan starts!"</string>
    <string name="exploit_hub">Exploits</string>
    <string name="exploit_wizard_step_1_of_2">Exploit Wizard (Step 1 of 2)</string>
    <string name="exploit_wizard_step_2_of_2">Exploit Wizard (Step 2 of 2)</string>
    <string name="fast_scan_less_ports">Fast scan (fewer ports)</string>
    <string name="handshakes">Handshakes</string>
    <string name="how_it_works_nenter_message_or_part_of_it_which_script_displays_on_success_result_if_no_msg_found_result_marked_as_failed">"How does it work?
Enter the message (or part of it) that the script will display on success. If the message is not found, the result is marked as failed!"</string>
    <string name="local_network">Local network</string>
    <string name="mark_host_s_as_online">Mark host(s) as online</string>
    <string name="nmap">Nmap Scanner</string>
    <string name="ranges_and_ips">Ranges and IP</string>
    <string name="router_scan_settings">Router Scan Settings</string>
    <string name="save">Save</string>
    <string name="select">Path to exploit: click to select</string>
    <string name="set_max_threads">Set the maximum number of threads</string>
    <string name="set_ranges">Set Ranges</string>
    <string name="set_timeout_ms">Set timeout (ms)</string>
    <string name="successful_pattern">successful pattern</string>
    <string name="title">Title</string>
    <string name="wifi">WiFi Networks</string>
</resources>