<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
      xmlns:app="http://schemas.android.com/apk/res-auto">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1.0">
            <com.google.android.material.progressindicator.LinearProgressIndicator android:layout_width="match_parent" android:layout_height="20.0dp" android:progress="50" />
            <com.airbnb.lottie.LottieAnimationView android:layout_gravity="center" android:layout_width="200.0dp" android:layout_height="200.0dp" android:layout_marginTop="10.0dp" app:lottie_autoPlay="true" app:lottie_loop="true" app:lottie_rawRes="@raw/atom2" app:lottie_speed="0.2" />
            <TextView android:textSize="22.0dp" android:textStyle="bold" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dp" android:layout_marginBottom="10.0dp" android:text="@string/exploit_wizard_step_1_of_2" />
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dp">
                <TextView android:textSize="16.0dp" android:id="@id/ew_exploit_path" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dp" android:text="@string/select" />
            </LinearLayout>
            <TextView android:textSize="16.0dp" android:id="@id/ew_path_hint" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dp" android:text="@string/ew_path" />
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="14.0dp" android:layout_gravity="center_vertical" android:id="@id/ew_exploit_prefix" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dp" android:text="test.py " />
                <com.google.android.material.textfield.TextInputLayout android:id="@id/editlogin" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10.0dp" android:hint="@string/arguments" app:hintEnabled="true" app:hintTextColor="#ff676262">
                    <com.google.android.material.textfield.TextInputEditText android:id="@id/getargs" android:layout_width="match_parent" android:layout_height="55.0dp" android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <TextView android:textSize="12.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10.0dp" android:text="@string/allowed_shortcuts_n_ip_ip_address_n_port_port_n_gw_gateway_n_mask_subnet_mask_n_mac_mac_address_n_ncustom_shortcuts_n_customtext_app_will_ask_you_to_enter_variable_manually" />
            <TextView android:textSize="12.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10.0dp" android:text="@string/example_n_myexploit_t_ip_p_port_threads_n_n_n_n_works_as_customtext_and_you_will_be_able_to_enter_it_before_scan_starts" />
        </LinearLayout>
        <ImageView android:layout_gravity="right" android:id="@id/ew_next" android:background="@drawable/circle" android:layout_width="60.0dp" android:layout_height="60.0dp" android:layout_marginRight="15.0dp" android:layout_marginBottom="25.0dp" android:src="@drawable/navigate_next" android:tint="@color/white" android:backgroundTint="@color/blue2" />
    </LinearLayout>
</ScrollView>
