<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
      xmlns:app="http://schemas.android.com/apk/res-auto">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_weight="1.0">
            <com.google.android.material.progressindicator.LinearProgressIndicator android:layout_width="match_parent" android:layout_height="20.0dp" android:progress="100" />
            <com.airbnb.lottie.LottieAnimationView android:layout_gravity="center" android:layout_width="200.0dp" android:layout_height="200.0dp" android:layout_marginTop="10.0dp" app:lottie_autoPlay="true" app:lottie_loop="true" app:lottie_rawRes="@raw/atom2" app:lottie_speed="0.2" />
            <TextView android:textSize="22.0dp" android:textStyle="bold" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dp" android:layout_marginBottom="10.0dp" android:text="@string/exploit_wizard_step_2_of_2" />
            <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10.0dp" android:hint="@string/title" app:hintEnabled="true" app:hintTextColor="#ff676262">
                <com.google.android.material.textfield.TextInputEditText android:id="@id/getname" android:layout_width="match_parent" android:layout_height="55.0dp" android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10.0dp" android:hint="@string/successful_pattern" app:hintEnabled="true" app:hintTextColor="#ff676262">
                <com.google.android.material.textfield.TextInputEditText android:id="@id/getsuccess" android:layout_width="match_parent" android:layout_height="55.0dp" android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView android:textSize="12.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10.0dp" android:text="@string/how_it_works_nenter_message_or_part_of_it_which_script_displays_on_success_result_if_no_msg_found_result_marked_as_failed" />
            <TextView android:textSize="12.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10.0dp" android:text="@string/example_n_exploit_successful_marked_as_good_result_nif_no_such_msg_failed" />
        </LinearLayout>
        <ImageView android:layout_gravity="right" android:id="@id/ew_next" android:background="@drawable/circle" android:layout_width="60.0dp" android:layout_height="60.0dp" android:layout_marginRight="15.0dp" android:layout_marginBottom="25.0dp" android:src="@drawable/navigate_next" android:tint="@color/white" android:backgroundTint="@color/blue2" />
    </LinearLayout>
</ScrollView>
