<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="20.0dp" app:cardCornerRadius="15.0dp" app:strokeColor="@color/grey" app:strokeWidth="1.0dp"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="18.0dp" android:textStyle="bold" android:id="@id/module_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dp" android:layout_marginTop="10.0dp" android:layout_marginRight="10.0dp" android:layout_marginBottom="15.0dp" android:text="@string/router_scan_settings" android:lineSpacingExtra="5.0dp" />
        <TextView android:textSize="12.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dp" android:layout_marginTop="10.0dp" android:layout_marginRight="10.0dp" android:text="@string/set_max_threads" android:lineSpacingExtra="5.0dp" />
        <com.google.android.material.textfield.TextInputLayout android:layout_gravity="center" android:id="@id/setmaxthreads" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10.0dp" android:hint="10-200">
            <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent" android:layout_height="60.0dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView android:textSize="12.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dp" android:layout_marginTop="10.0dp" android:layout_marginRight="10.0dp" android:text="@string/set_timeout_ms" android:lineSpacingExtra="5.0dp" />
        <com.google.android.material.textfield.TextInputLayout android:layout_gravity="center" android:id="@id/setmaxtimeout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10.0dp" android:hint="300-3000(ms)">
            <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent" android:layout_height="60.0dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton android:id="@id/save_router_settings" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10.0dp" android:text="@string/save" android:drawableStart="@drawable/save" android:drawableTint="@color/white" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
